# ini-client-server

./: .gitignore  CMakeLists.txt  README.md  example.ini  test.sh
.github/workflows/: ci.yaml
ini_client/: CMakeLists.txt  ini_client.cpp  tests.sh
ini_resource_lib/: CMakeLists.txt  README.md  example.ini  ini_resource.cpp  ini_resource.h  test.cpp
ini_server/: CMakeLists.txt  example.ini  ini_server.cpp  test.sh
